{
    "name": "Player2",
    "maps": [
        {
            "name": "Player",
            "id": "9b908201-c2e1-42f9-87cd-3bb522b18b8f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8f20a924-6dce-4283-8385-3596232ce4db",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Arrows",
                    "id": "d54c2142-dad0-48eb-b706-0534dd44d1cf",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c9147693-5b3b-4b6c-9639-13f423d874f7",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "83bbcf69-72e7-47e9-950e-0713553999a1",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8178ae9a-806f-4cff-b3b0-db0117ada1ee",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "71721801-9a55-4fe0-bc02-40449659a452",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}